--- a/bin/Main.fxml
+++ b/bin/Main.fxml
@@ -3,9 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="graph" fx:id="graph" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMousePressed="#onGraphPressed" prefHeight="715.0" prefWidth="927.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<AnchorPane id="graph" fx:id="graph" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMousePressed="#onGraphPressed" prefHeight="898.0" prefWidth="1225.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
-      <Button id="addEdgeButton" fx:id="addEdgeButton" layoutX="392.0" layoutY="78.0" mnemonicParsing="false" onAction="#addEdge" prefHeight="36.0" prefWidth="99.0" text="Button" />
+      <Button id="print" fx:id="print" layoutX="650.0" layoutY="78.0" mnemonicParsing="false" onAction="#printGraph" prefHeight="36.0" prefWidth="122.0" text="Print Graph" />
+      <Button id="callbfs" fx:id="callbfs" layoutX="54.0" layoutY="85.0" mnemonicParsing="false" onAction="#bfsAnimation" prefHeight="36.0" prefWidth="122.0" text="BFS" />
+      <Button id="calldfs" fx:id="calldfs" layoutX="383.0" layoutY="91.0" mnemonicParsing="false" onAction="#callDFS" prefHeight="36.0" prefWidth="122.0" text="DFS" />
    </children>
 </AnchorPane>
