--- a/src/Main.fxml
+++ b/src/Main.fxml
@@ -4,34 +4,34 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="graph" fx:id="graph" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMousePressed="#onGraphPressed" prefHeight="898.0" prefWidth="1225.0" style="-fx-background-color: #F0FFFF;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<AnchorPane id="graph" fx:id="graph" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMousePressed="#onGraphPressed" prefHeight="1005.0" prefWidth="1507.0" style="-fx-background-color: #F0FFFF;" stylesheets="@application.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
-      <JFXButton fx:id="setRootButton" buttonType="RAISED" focusTraversable="false" layoutX="461.0" layoutY="22.0" onAction="#setRoot" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Set Root" textFill="WHITE">
+      <JFXButton fx:id="setRootButton" buttonType="RAISED" focusTraversable="false" layoutX="604.0" layoutY="22.0" onAction="#setRoot" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Set Root" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="callbfs" buttonType="RAISED" focusTraversable="false" layoutX="153.0" layoutY="22.0" onAction="#bfsAnimation" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Run BFS" textFill="WHITE">
+      <JFXButton fx:id="callbfs" buttonType="RAISED" focusTraversable="false" layoutX="294.0" layoutY="22.0" onAction="#bfsAnimation" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Run BFS" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="calldfs" buttonType="RAISED" focusTraversable="false" layoutX="307.0" layoutY="22.0" onAction="#callDFS" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Run DFS" textFill="WHITE">
+      <JFXButton fx:id="calldfs" buttonType="RAISED" focusTraversable="false" layoutX="450.0" layoutY="22.0" onAction="#callDFS" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Run DFS" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="reset" buttonType="RAISED" focusTraversable="false" layoutX="771.0" layoutY="22.0" onAction="#resetAnimation" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Reset Animation" textFill="WHITE">
+      <JFXButton fx:id="reset" buttonType="RAISED" focusTraversable="false" layoutX="914.0" layoutY="22.0" onAction="#resetAnimation" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Reset Animation" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="pauseandplay" buttonType="RAISED" focusTraversable="false" layoutX="616.0" layoutY="22.0" onAction="#pauseAndplayAnimation" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Pause Animation" textFill="WHITE">
+      <JFXButton fx:id="pauseandplay" buttonType="RAISED" focusTraversable="false" layoutX="759.0" layoutY="22.0" onAction="#pauseAndplayAnimation" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Pause Animation" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton fx:id="clear" buttonType="RAISED" focusTraversable="false" layoutX="927.0" layoutY="22.0" onAction="#clear" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Clear Graph" textFill="WHITE">
+      <JFXButton fx:id="clear" buttonType="RAISED" focusTraversable="false" layoutX="1070.0" layoutY="22.0" onAction="#clear" prefHeight="36.0" prefWidth="134.0" ripplerFill="WHITE" style="-fx-background-color: #1E90FF;" text="Clear Graph" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
